# esp32-bike-computer

./: .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  LICENSES.md  PRIVACY_POLICY.md  README.md  WAVESHARE_HARDWARE.md
.github/: pull_request_template.md
IceNav-v3/: WAVESHARE_AMOLED_175_PORT.md  build_log.txt  build_log_2.txt  build_log_3.txt  platformio.ini  test_display.cpp  test_display_debug.cpp
OSM_Extract/: README.md
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/config/: source-regions.json
backend/map_platform/: __init__.py  api.py  artifacts.py  cli.py  geofabrik_sources.py  installations.py  jobs.py  manifest.py  map_signing.py  map_stream.py  map_stream_build_identity.py  map_stream_hardware_requirements.py  map_stream_rollout.py  map_stream_trust_registry.py  models.py  pipeline.py  preview.py  rate_limits.py  reuse.py  sources.py  strict_json.py  worker.py
backend/tests/: test_api.py  test_artifacts.py  test_cli.py  test_installations.py  test_manifest.py  test_map_signing.py  test_map_stream.py  test_map_stream_build_identity.py  test_map_stream_hardware_gate.py  test_map_stream_rollout.py  test_map_stream_trust_registry.py  test_pipeline_artifacts.py  test_pipeline_progress.py  test_preview.py  test_rate_limits.py  test_reuse.py  test_sources_jobs.py  test_worker.py
backend/tests/fixtures/: map_stream_v1_golden.txt
backend/tools/: check_map_stream_hardware_gate.py  generate_map_stream_build_identity.py  generate_map_stream_golden.py  generate_map_stream_trust.py
config/: map-stream-hardware-gate.json  (+2 more)
(+332 files in other folders)
