[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "open-bike-map-platform"
version = "0.1.0"
description = "Offline map generation backend for Open Bike Computer"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=43,<49",
  "Pillow>=10"
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1"
]
test = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1"
]
object-storage = [
  "boto3>=1.37,<2"
]

[project.scripts]
map-platform = "map_platform.cli:main"

[tool.setuptools]
packages = ["map_platform"]
